# gmmnlse-torch

./: .gitignore  0_example_linear_multimode.py  1_benchmark.py  2_benchmark_raman.py  CHECKPOINTING_README.md  README.md  calc_SRSK_tensors_1550.m  example_linear_multi.py  few-mode-fiber-double.py  few-mode-fiber.py  gen-betas.py  mat_to_npy.py  mat_to_npy2.py  multimode-soliton.py  nonlinear_coupling.py  nonlinear_coupling_FMF.py  npy_to_mat.py  plot-mode.py  pyproject.toml  spectral-engineering-checkpoint.py  spectral-engineering.py  spm.py  test-mode.py  test-modesolver.py
GRIN_1550_FMF/: fiber_info.txt  fiberprofile.fig
GRIN_wavelength1030nm_2/: fiber_info.txt  fiberprofile.fig
examples/: example_1300.py  example_1300_autodiff.py  example_1300_autodiff_2.py  example_1300_autodiff_Length.py  example_1300_autodiff_checkpointed.py  example_1300_autodiff_checkpointed_2.py  example_1300_optimum_test.py  example_GRIN_1300_checkpointed.py  example_GRIN_1300_dispersion.py  example_GRIN_1300_dispersion_autodiff.py  example_GRIN_1300_final.py  example_GRIN_1300_final_checkpointed.py  example_GRIN_1300_raman_autodiff.py  example_GRIN_1300_raman_complex_autodiff.py  example_GRIN_1300_raman_complex_spectrum_autodiff.py  example_GRIN_1300_source.py  example_GRIN_1300_source_final.py  example_GRIN_1300_source_gpu.py  example_GRIN_1300_source_gpu_runabl.py  example_autodiff_complex_test.py  example_autodiff_dispersion_test.py  example_autodiff_real_test.py  example_autodiff_test.py  example_dispersion_test.py  example_linear.py  example_linear_multi.py  example_linear_single.py
(+50 files in other folders)
