[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmmnlse"
version = "0.1.0"
description = "Generalized Multimode Nonlinear Schrödinger Equation Solver"
authors = [
  { name="Myungjoon Kim", email="mk2689@cornell.edu" }
]
dependencies = [
    "numpy",
    "scipy",
    "torch", 
    "matplotlib"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."] 